# rs-rational

./: .travis.yml  Cargo.toml
examples/: algebra.rs  base.rs  complex.rs  complex_algebra.rs
src/: complex.rs  lib.rs  traits.rs
